<resources>
    <string name="app_name">Demorpher</string>
    <string name="settings">Settings</string>
    <string name="AboutUs">About Us</string>
    <string name="nfc_scan">NFC Scan</string>
    <string name="match">Match</string>
    <string name="demorph">Demorph</string>
    <string name="view_photos">View</string>
    <string name="take_photo">Capture</string>
    <string name="todo">TODO</string>
    <string name="image">Image</string>
    <string name="compareLiveFace">Compare live face</string>
    <string name="start_scan">Start scan</string>
    <string name="loading_face_detection">Loading face detection</string>
    <string name="live_face">Live face</string>
    <string name="failed_to_read_travel_document">Failed to read passport</string>
    <string name="travel_document">Passport</string>
    <string name="document_number">Document number</string>
    <string name="personal_number">Personal number</string>
    <string name="document_code">Document code</string>
    <string name="issuing_state">Issuing state</string>
    <string name="date_of_expiry">Date of expiry</string>
    <string name="primary_identifier">Primary identifier</string>
    <string name="secondary_identifiers">Secondary identifiers</string>
    <string name="nationality">Nationality</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="failed_to_register_face">Failed to register face</string>
    <string name="view">View</string>
    <string name="capture">Capture</string>
    <string name="nfc">NFC</string>
    <string name="copy_right">Copyrights © %1$d</string>
</resources>
