<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainScreen">


    <Button
        android:id="@+id/btn_nfc_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:onClick="nfcScan"
        android:text="@string/nfc_scan"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_take_photo"
        app:layout_constraintEnd_toStartOf="@+id/btn_take_photo"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_take_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button"
        android:onClick="takePhoto"
        android:text="@string/take_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_demorph"
        app:layout_constraintStart_toEndOf="@+id/btn_nfc_scan"
        app:layout_constraintTop_toBottomOf="@+id/main_screen_card" />

    <Button
        android:id="@+id/btn_demorph"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:onClick="demorph"
        android:text="@string/demorph"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_take_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_take_photo" />

    <Button
        android:id="@+id/btn_match_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:onClick="matchPhoto"
        android:text="@string/match"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_nfc_scan"
        app:layout_constraintStart_toStartOf="@+id/btn_nfc_scan"
        app:layout_constraintTop_toBottomOf="@+id/btn_nfc_scan" />

    <Button
        android:id="@+id/btn_about_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:onClick="about"
        android:text="@string/AboutUs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_demorph"
        app:layout_constraintStart_toStartOf="@+id/btn_demorph"
        app:layout_constraintTop_toBottomOf="@+id/btn_demorph" />


    <androidx.cardview.widget.CardView
        android:id="@+id/main_screen_card"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_marginTop="100dp"
        android:elevation="10dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/main_screen_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image"
            app:srcCompat="@android:drawable/ic_menu_camera" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_view_photos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:onClick="viewPhoto"
        android:text="@string/view_photos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_about_us"
        app:layout_constraintStart_toEndOf="@+id/btn_match_photo"
        app:layout_constraintTop_toBottomOf="@+id/btn_take_photo" />

    <TextView
        android:id="@+id/main_screen_pass_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Passport Image"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_screen_card" />
</androidx.constraintlayout.widget.ConstraintLayout>