<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ScanResultActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="@dimen/table_cell_vertical_padding"
            android:scaleType="fitCenter" />

        <View
            android:layout_height="1dp"
            android:background="@color/tableRowDivider" />

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/table_cell_horizontal_padding"
                android:paddingTop="@dimen/table_cell_vertical_padding"
                android:paddingBottom="@dimen/table_cell_vertical_padding"
                android:text="@string/document_number"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/documentNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingTop="@dimen/table_cell_vertical_padding"
                android:paddingEnd="@dimen/table_cell_horizontal_padding"
                android:paddingBottom="@dimen/table_cell_vertical_padding"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </TableRow>

        <View
            android:layout_height="1dp"
            android:background="@color/tableRowDivider" />

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/table_cell_horizontal_padding"
                android:paddingTop="@dimen/table_cell_vertical_padding"
                android:paddingBottom="@dimen/table_cell_vertical_padding"
                android:text="@string/personal_number"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/personalNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingTop="@dimen/table_cell_vertical_padding"
                android:paddingEnd="@dimen/table_cell_horizontal_padding"
                android:paddingBottom="@dimen/table_cell_vertical_padding"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </TableRow>

        <View
            android:layout_height="1dp"
            android:background="@color/tableRowDivider" />

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/table_cell_horizontal_padding"
                android:paddingTop="@dimen/table_cell_vertical_padding"
                android:paddingBottom="@dimen/table_cell_vertical_padding"
                android:text="@string/document_code"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/documentCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingTop="@dimen/table_cell_vertical_padding"
                android:paddingEnd="@dimen/table_cell_horizontal_padding"
                android:paddingBottom="@dimen/table_cell_vertical_padding"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </TableRow>

        <View
            android:layout_height="1dp"
            android:background="@color/tableRowDivider" />

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/table_cell_horizontal_padding"
                android:paddingTop="@dimen/table_cell_vertical_padding"
                android:paddingBottom="@dimen/table_cell_vertical_padding"
                android:text="@string/issuing_state"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/issuingState"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingTop="@dimen/table_cell_vertical_padding"
                android:paddingEnd="@dimen/table_cell_horizontal_padding"
                android:paddingBottom="@dimen/table_cell_vertical_padding"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </TableRow>

        <View
            android:layout_height="1dp"
            android:background="@color/tableRowDivider" />

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/table_cell_horizontal_padding"
                android:paddingTop="@dimen/table_cell_vertical_padding"
                android:paddingBottom="@dimen/table_cell_vertical_padding"
                android:text="@string/date_of_expiry"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/dateOfExpiry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingTop="@dimen/table_cell_vertical_padding"
                android:paddingEnd="@dimen/table_cell_horizontal_padding"
                android:paddingBottom="@dimen/table_cell_vertical_padding"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </TableRow>

        <View
            android:layout_height="1dp"
            android:background="@color/tableRowDivider" />

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/table_cell_horizontal_padding"
                android:paddingTop="@dimen/table_cell_vertical_padding"
                android:paddingBottom="@dimen/table_cell_vertical_padding"
                android:text="@string/primary_identifier"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/primaryIdentifier"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingTop="@dimen/table_cell_vertical_padding"
                android:paddingEnd="@dimen/table_cell_horizontal_padding"
                android:paddingBottom="@dimen/table_cell_vertical_padding"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </TableRow>

        <View
            android:layout_height="1dp"
            android:background="@color/tableRowDivider" />

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/table_cell_horizontal_padding"
                android:paddingTop="@dimen/table_cell_vertical_padding"
                android:paddingBottom="@dimen/table_cell_vertical_padding"
                android:text="@string/secondary_identifiers"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/secondaryIdentifiers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingTop="@dimen/table_cell_vertical_padding"
                android:paddingEnd="@dimen/table_cell_horizontal_padding"
                android:paddingBottom="@dimen/table_cell_vertical_padding"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </TableRow>

        <View
            android:layout_height="1dp"
            android:background="@color/tableRowDivider" />

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/table_cell_horizontal_padding"
                android:paddingTop="@dimen/table_cell_vertical_padding"
                android:paddingBottom="@dimen/table_cell_vertical_padding"
                android:text="@string/nationality"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/nationality"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingTop="@dimen/table_cell_vertical_padding"
                android:paddingEnd="@dimen/table_cell_horizontal_padding"
                android:paddingBottom="@dimen/table_cell_vertical_padding"

                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </TableRow>

        <View
            android:layout_height="1dp"
            android:background="@color/tableRowDivider" />

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/table_cell_horizontal_padding"
                android:paddingTop="@dimen/table_cell_vertical_padding"
                android:paddingBottom="@dimen/table_cell_vertical_padding"
                android:text="@string/gender"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingTop="@dimen/table_cell_vertical_padding"
                android:paddingEnd="@dimen/table_cell_horizontal_padding"
                android:paddingBottom="@dimen/table_cell_vertical_padding"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </TableRow>

        <View
            android:layout_height="1dp"
            android:background="@color/tableRowDivider" />

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/table_cell_horizontal_padding"
                android:paddingTop="@dimen/table_cell_vertical_padding"
                android:paddingBottom="@dimen/table_cell_vertical_padding"
                android:text="@string/date_of_birth"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/dateOfBirth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingTop="@dimen/table_cell_vertical_padding"
                android:paddingEnd="@dimen/table_cell_horizontal_padding"
                android:paddingBottom="@dimen/table_cell_vertical_padding"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/next_capture_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_next"
                android:text="Take Live Image"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>
</ScrollView>